--- a/DecifraMe/Page1.xaml
+++ b/DecifraMe/Page1.xaml
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DecifraMe.Page1">
+             x:Class="DecifraMe.Page1"
+             Title="1 Pergunta"
+             Background="Gray">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="O que é tão frágil que dizer o nome dele o quebra?"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <Entry HorizontalOptions="FillAndExpand" x:Name="enResposta" />
+            <Button Text="Responder" Clicked="Button_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
