--- a/DecifraMe/Page1.xaml
+++ b/DecifraMe/Page1.xaml
@@ -12,6 +12,7 @@
                    FontSize="Large"/>
             <Entry HorizontalOptions="FillAndExpand" x:Name="enResposta" />
             <Button Text="Responder" Clicked="Button_Clicked"/>
+            <Button Text="Voltar para o inicio" Clicked="Button_Clicked_1"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
