--- a/DecifraMe/Page2.xaml
+++ b/DecifraMe/Page2.xaml
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DecifraMe.Page2">
+             x:Class="DecifraMe.Page2"
+             Title="2 Pergunta"
+             Background="Red">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="O que tem chaves mas não pode abrir fechaduras?"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand" 
+                   FontSize="Large"/>
+            <Entry HorizontalOptions="FillAndExpand" x:Name="enResposta" />
+            <Button Text="Responder" Clicked="Button_Clicked"/>
+            <Button Text="Voltar para o inicio" Clicked="Button_Clicked_1"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
