--- a/DecifraMe/Page3.xaml
+++ b/DecifraMe/Page3.xaml
@@ -10,7 +10,7 @@
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" 
                    FontSize="Large"/>
-            <Button Text="Reiniciar jogo" Clicked="Button_Clicked"
+            <Button Text="Reiniciar jogo" Clicked="Button_Clicked"></Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
